feat(order-checkout): checkout flow with state machine, payment/shipping/notification mocks and JSF wizard
Completes the order & checkout epic (stories S1-S8):
- S1 domain: Order state machine (OPEN/PENDING/CONFIRMED/.../REFUNDED),
  OrderLine, ShippingAddress, PaymentInfo + value objects, domain exceptions
- S2/S3 persistence: OrderJpaEntity aggregate + mapper, paginated
  findByCustomerId, Flyway V11-V13 with rollbacks
- S4-S6 ports + local-dev mocks: PaymentGateway, ShippingRate, Notification
- S7 use case: OrderApplicationService with requestId idempotency, stock
  decrement, authorize-capture, confirm + notify (PENDING on capture failure)
- S8 web: 4-step @ViewScoped checkout wizard (review -> shipping -> payment
  -> confirm) with PRG to order-confirmed, wired to CreateOrderFromCartUseCase
- Removes superseded CheckoutService/CheckoutUseCase/OrderItem